[package]
edition = "2021"
name    = "esp-drv8833"
version = "0.1.3"
description = "A crate that provides control over the DRV8833 Dual H-Bridge Motor Driver"
authors = ["nguterresn"]
repository = "https://github.com/nguterresn/esp-drv8833"
license = "MIT"
readme = "README.md"
keywords = ["embedded", "no-std", "motor", "drv8833", "esp32"]
categories = ["embedded", "hardware-support", "no-std"]

[dependencies]
critical-section = "1.2.0"
esp-hal          = { version = "1.0.0-beta.1", features = ["unstable"] }

[features]
default = []
esp32 = ["esp-hal/esp32"]
esp32c3 = ["esp-hal/esp32c3"]
esp32c6 = ["esp-hal/esp32c6"]
esp32s2 = ["esp-hal/esp32s2"]
esp32s3 = ["esp-hal/esp32s3"]
esp32h2 = ["esp-hal/esp32h2"]

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
